remove experiment, add dev env for keen, save ref url and params separately, make sure video shows correctly on mobile

--- a/css/global.scss
+++ b/css/global.scss
@@ -138,7 +138,7 @@ p {
     }
   }
   
-  .app-container-variant, .app-container-mobile {
+  .app-container-mobile {
       display: none;
   }
 
